--- a/index.htm
+++ b/index.htm
@@ -1063,6 +1063,28 @@ function buyGen(id) {
   skipQuestCheck = false;
 }
 
+function buyGenMax(id) {
+  let g = game.generators.find(x => x.id === id);
+  if (!g || !isUnlocked(g)) return;
+
+  let count = 0;
+  while (true) {
+    let cost = g.p * Math.pow(g.m, g.c);
+    if (game.coins < cost) break;
+    game.coins -= cost;
+    g.c++;
+    count++;
+  }
+  
+  if (count > 0) {
+    log("✅ +" + count + "x " + g.n);
+    save();
+    skipQuestCheck = true;
+    updateUI();
+    skipQuestCheck = false;
+  }
+}
+
 function buyUp(id) {
   let u = game.upgrades.find(x => x.id === id);
   if (!u || !isUnlocked(u)) return;
@@ -1077,6 +1099,28 @@ function buyUp(id) {
   skipQuestCheck = true;
   updateUI();
   skipQuestCheck = false;
+}
+
+function buyUpMax(id) {
+  let u = game.upgrades.find(x => x.id === id);
+  if (!u || !isUnlocked(u)) return;
+
+  let count = 0;
+  while (true) {
+    let cost = u.p * Math.pow(1.15, u.b);
+    if (game.coins < cost) break;
+    game.coins -= cost;
+    u.b++;
+    count++;
+  }
+  
+  if (count > 0) {
+    log("✅ " + u.n + " +${count}");
+    save();
+    skipQuestCheck = true;
+    updateUI();
+    skipQuestCheck = false;
+  }
 }
 
 function buyBoost(boostType) {
@@ -1270,7 +1314,7 @@ function updateUI() {
     if (!unlocked) {
       genHtml += `<div class="item" style="opacity:0.5;border-left:3px solid #f66"><strong>${g.n}</strong> ${unlockText}</div>`;
     } else {
-      genHtml += `<div class="item"><strong>${g.n}</strong> ×${g.c} <span style="color:#0f0">(${fmt(gainPerSec)}/s)</span><button class="btn gen-buy" data-id="${g.id}" ${game.coins < cost ? "disabled" : ""}>${fmt(cost)}</button></div>`;
+      genHtml += `<div class="item"><strong>${g.n}</strong> ×${g.c} <span style="color:#0f0">(${fmt(gainPerSec)}/s)</span><button class="btn gen-buy" data-id="${g.id}" ${game.coins < cost ? "disabled" : ""}>+1 (${fmt(cost)})</button><button class="btn" style="background:#0f0; color:#000" onclick="buyGenMax('${g.id}')">MAX</button></div>`;
     }
   }
   $("gensList").innerHTML = genHtml;
@@ -1285,7 +1329,7 @@ function updateUI() {
     if (!unlocked) {
       upHtml += `<div class="item" style="opacity:0.5;border-left:3px solid #f66"><strong>${u.n}</strong> ${unlockText}</div>`;
     } else {
-      upHtml += `<div class="item"><strong>${u.n}</strong> ×${u.e} <span style="color:#0f0">(Lvl ${u.b})</span><button class="btn up-buy" data-id="${u.id}" ${game.coins < cost ? "disabled" : ""}>${fmt(cost)}</button></div>`;
+      upHtml += `<div class="item"><strong>${u.n}</strong> ×${u.e} <span style="color:#0f0">(Lvl ${u.b})</span><button class="btn up-buy" data-id="${u.id}" ${game.coins < cost ? "disabled" : ""}>+1 (${fmt(cost)})</button><button class="btn" style="background:#0f0; color:#000" onclick="buyUpMax('${u.id}')">MAX</button></div>`;
     }
   }
   $("upsList").innerHTML = upHtml || "Tous débloqués!";
