--- a/index.htm
+++ b/index.htm
@@ -367,7 +367,7 @@
     <button class="tab-btn" data-tab="trade">💸 TRADING</button>
     <button class="tab-btn" data-tab="bank">🏦 BANQUE</button>
     <button class="tab-btn" data-tab="lottery">🎰 LOTTERIE</button>
-    <button class="tab-btn" data-tab="ascension">🚀 ASCENSION</button>
+    <button class="tab-btn" data-tab="ascensionTab">🚀 ASCENSION</button>
     <button class="tab-btn" data-tab="achievements">🏆 ACHIEVEMENTS</button>
     <button class="tab-btn" data-tab="feat">✨ FEATURES</button>
     <button class="tab-btn" data-tab="stats">📊 STATS</button>
@@ -590,7 +590,7 @@
   </div>
 
   <!-- TAB: ASCENSION -->
-  <div id="ascension" class="content">
+  <div id="ascensionTab" class="content">
     <div class="card">
       <h3>🚀 ASCENSION - META PRESTIGE</h3>
       <p style="color: #fa0; margin-bottom: 1rem;">Réinitialise TOUT mais donne des bonus permanents énormes!</p>
