--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="color-scheme" content="dark">
+  <meta name="theme-color" content="#0a0a0a">
   <title>Incremental Trade ULTIMATE - FIXED</title>
   <style>
     * {
@@ -13,11 +15,23 @@
     }
 
 ```
+/* ✅ FORCER LE MODE SOMBRE PARTOUT */
+@media (prefers-color-scheme: light) {
+  body {
+    background: #0a0a0a !important;
+    color: #eee !important;
+  }
+}
+
 body {
   font-family: Arial, sans-serif;
-  background: #0a0a0a;
-  color: #eee;
+  background: #0a0a0a !important;
+  color: #eee !important;
   padding: 1rem;
+}
+
+html {
+  background: #0a0a0a !important;
 }
 
 .container {
