--- a/index.htm
+++ b/index.htm
@@ -821,7 +821,7 @@ canvas {
 
 <!-- ✅ CHANGELOGS MODAL -->
 
-<div id="changelogsModal" style="display:none">
+<div id="changelogsModal" style="position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0, 0, 0, 0.98);z-index: 9999;padding: 1rem;overflow-y: auto;display: none;">
   <div class="tut-box">
     <h1>📝 CHANGELOGS - HISTORIQUE</h1>
     <div id="changelogsContent" style="min-height:300px;line-height:1.8;margin:1rem 0;max-height:600px;overflow-y:auto;"></div>
